<resources>
    <string name="app_name">AssignmentOne</string>
    <string name="have_questions_or_need_a_little_beauty_advice_we_re_here_for_you_send_us_a_message_anytime_our_glam_squad_is_just_a_click_away">Have questions or need a little beauty advice? We\'re here for you! Send us a message anytime — our glam squad is just a click away.</string>
    <string name="write_your_question_here">write your question here</string>
    <string name="contact_us">Contact Us</string>
    <string name="back_to_navigation">Back to Navigation</string>
    <string name="username">Username:</string>
    <string name="enter_username">enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="start_your_beauty_journey_sign_up">Start your beauty journey → Sign up</string>
    <string name="thank_you_for_shopping_with_us_gorgeous">Thank you for shopping with us gorgeous</string>
    <string name="logout">LogOut</string>
    <string name="cart">Cart</string>
    <string name="user_profile">User Profile</string>
    <string name="shop">SHOP</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="navigate_our_app_beautiful">Navigate our app beautiful</string>
    <string name="tell_us_what_you_think_gorgeous_leave_us_a_review_on_your_fave_product">Tell Us What You Think, Gorgeous! Leave us a review on your fave product</string>
    <string name="item_name">Item name:</string>
    <string name="please_leave_a_review_here_gorg">please leave a review here gorg</string>
    <string name="submit_review">Submit Review</string>
    <string name="shop_all">SHOP ALL</string>
    <string name="face">Face</string>
    <string name="blush">Blush</string>
    <string name="lips">LIPS</string>
    <string name="bronzer">Bronzer</string>
    <string name="eyes">EYES</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Email:</string>
    <string name="full_name">Full Name:</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="name">Name :</string>
    <string name="deema_abu_nimeh">Deema Abu Nimeh</string>
    <string name="_1220002_student_birzeit_edu">1220002@student.birzeit.edu</string>
    <string name="age">Age:</string>
    <string name="bio">Bio:</string>
    <string name="deema_s_hobbies_revolve_around_all_things_beauty_from_experimenting_with_makeup_looks_to_discovering_the_latest_skincare_trends_glam_is_her_happy_place">Deema’s hobbies revolve around all things beauty — from experimenting with makeup looks to discovering the latest skincare trends. Glam is her happy place!</string>
</resources>