<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="36dp"
    android:paddingBottom="26dp"
    tools:context=".LogInScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="421dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="26dp"
        app:srcCompat="@drawable/pnlogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingLeft="20dp"
        android:text="@string/username"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#7C6D6DA1" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingLeft="20dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#7C6D6DA1" />


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="176dp"
        android:layout_height="35dp"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:layout_marginBottom="19dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginBottom="118dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/start_your_beauty_journey_sign_up"
        android:textSize="16sp" />
</LinearLayout>
