<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="16dp"
    tools:context=".ContactUs">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="303dp"
        android:layout_height="236dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:src="@drawable/pnlogo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/have_questions_or_need_a_little_beauty_advice_we_re_here_for_you_send_us_a_message_anytime_our_glam_squad_is_just_a_click_away"
        android:textColor="#D07474"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="364dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:hint="@string/write_your_question_here"
        android:inputType="text"
        android:textColorHint="#7C6D6DA1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFCECE"
        android:text="@string/contact_us"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button6"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFCECE"
        android:text="@string/back_to_navigation"
        android:textColor="#000000" />

</LinearLayout>
