<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="215dp"
            android:layout_height="196dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mecircle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Name Row -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/playfair_display_bold"
            app:layout_constraintTop_toBottomOf="@id/imageView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/deema_abu_nimeh"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView7"
            app:layout_constraintStart_toEndOf="@id/textView7" />

        <!-- Email Row -->
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/playfair_display_bold"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_1220002_student_birzeit_edu"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView10"
            app:layout_constraintStart_toEndOf="@id/textView10" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/playfair_display_bold"
            app:layout_constraintTop_toBottomOf="@id/textView10"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="21"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView12"
            app:layout_constraintStart_toEndOf="@id/textView12" />

        <!-- Bio Title -->
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bio"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/playfair_display_bold"
            app:layout_constraintTop_toBottomOf="@id/textView12"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Bio Content -->
        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deema_s_hobbies_revolve_around_all_things_beauty_from_experimenting_with_makeup_looks_to_discovering_the_latest_skincare_trends_glam_is_her_happy_place"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Button -->
        <Button
            android:id="@+id/button3"
            android:layout_width="232dp"
            android:layout_height="58dp"
            android:layout_marginTop="88dp"
            android:backgroundTint="#FFCECE"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/back_to_navigation"
            android:textAllCaps="true"
            android:textColor="#D0000000"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView15" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
