<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation">

    <Button
        android:id="@+id/logOut"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="89dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rev" />

    <Button
        android:id="@+id/cart"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/cart"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop" />

    <Button
        android:id="@+id/history"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/user_profile"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <Button
        android:id="@+id/shop"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/shop"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav" />

    <Button
        android:id="@+id/contact"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart" />

    <Button
        android:id="@+id/rev"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/leave_a_review"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/logOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <TextView
        android:id="@+id/nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/navigate_our_app_beautiful"
        android:textColor="#D07474"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>