<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <Button
        android:id="@+id/button4"
        android:layout_width="159dp"
        android:layout_height="39dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#FFCECE"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="#D0000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColorHint="#7C6D6DA1"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="382dp"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/email"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="232dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:textColorHint="#7C6D6DA1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/password"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="372dp"
        android:layout_height="187dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pnlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="35dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/full_name"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/example_gmail_com"
        android:inputType="text"
        android:textColorHint="#7C6D6DA1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>